# ThermalRes

./: .gitignore  README.md  demo_milestone3.py  demo_milestone4.py  demo_plant.py  pyproject.toml
rtl/: cosim_top.sv  link_monitor.sv  top.sv
sim/: demo.py
sim/cocotb/: Makefile  plant_adapter.py  test_cosim.py  test_link_monitor.py
tests/rtl/: __init__.py  test_rtl_equiv.py
tests/system/: test_closed_loop.py  test_link_integration.py  test_open_loop.py
tests/unit/: test_impairment.py  test_link_runner.py  test_resonator.py  test_thermal.py
thermalres/: __init__.py  cli.py  config.py
thermalres/control/: __init__.py  bang_bang.py  interfaces.py  pid.py
thermalres/cosim/: events.py  interfaces.py  kernel.py  link_runner.py  metrics.py  plant_runner.py  plotting.py
thermalres/digital/: __init__.py  reference.py
thermalres/plant/: __init__.py  impairment.py  resonator.py  thermal.py
thermalres/rtl/: __init__.py  adapter.py
thermalres/scenarios/: __init__.py  open_loop.py
thermalres/tests/: test_smoke.py
