[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thermalres"
version = "0.1.0"
description = "ThermalRes: mixed-domain co-simulation framework"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Jordan MacIntyre" }]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
rtl = [
  "cocotb>=1.8.0",
]
plot = [
  "matplotlib>=3.8",
]

[project.scripts]
thermalres = "thermalres.cli:main"

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["thermalres*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
